<resources>
    <string name="app_name">Журнал преподавателя</string>

    <!-- Titles -->
    <string name="group_activity_label">Список групп</string>

    <!-- Start activity options menu -->
    <string name="schedule_item">Расписание звонков</string>
    <string name="import_item">Импорт в базу данных</string>
    <string name="clear_item">Очистка базы данных</string>

    <!-- Start activity menu items -->
    <string name="groups">Группы</string>
    <string name="disciplines">Дисциплины</string>
    <string name="students">Отметить студентов</string>
    <string name="marks">Проставить баллы</string>
    <string name="journals">Формирование журналов</string>
    <string name="add_group_title">Добавление новой группы</string>
    <string name="group_name">Имя группы</string>
    <string name="group">Группа</string>
    <string name="group_duplicate">Группа с таким же именем уже существует</string>

    <string name="add_group_action_button">Добавление новой группы</string>
    <string name="add_student_title">Новый студент</string>
    <string name="edit_student_title">Изменить студента</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="last_name">Фамилия</string>
    <string name="first_subgroup">Подгруппа 1</string>
    <string name="second_subgroup">Подгруппа 2</string>
    <string name="variant_full_label">Вариант</string>
    <string name="subgroup_label">Подгруппа</string>
    <string name="variant_label">В</string>
    <string name="kp_label">КП</string>

    <string name="required_filed">Поле обязательно для заполнения</string>
    <string name="save">Сохранить</string>
    <string name="dialog_ok">Применить</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="no_data_available">Данных нет</string>
    <string name="remove">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="edit_title">Редактирование</string>

    <string name="schedule">Расписание звонков</string>
    <string name="lesson_number">Номер урока</string>
    <string name="lesson_start_time">Начало урока</string>
    <string name="lesson_end_time">Конец урока</string>

    <string name="empty">
        Пусто. Используйте кнопку в правом нижнем углу для добавления элементов.
    </string>

    <string-array name="lesson_durations">
        <item>08:30</item>
        <item>09:15</item>
        <item>09:20</item>
        <item>10:05</item>
        <item>10:15</item>
        <item>11:00</item>
        <item>11:05</item>
        <item>11:50</item>
        <item>12:30</item>
        <item>13:15</item>
        <item>13:20</item>
        <item>14:05</item>
        <item>14:15</item>
        <item>15:00</item>
        <item>15:05</item>
        <item>15:50</item>
    </string-array>

    <string name="copyright">© 2022 Nightcrawler</string>
</resources>