<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            tools:context=".activities.StudentSubmissionActivity">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/group_label" android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:hint="@string/last_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/last_name_input"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:hint="@string/first_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/middle_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/name_input"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:hint="@string/middle_name"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/group_text_view"
                app:layout_constraintTop_toBottomOf="@+id/middle_name_input" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
        <RadioGroup
                android:id="@+id/subgroup_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/middle_name_input"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">
            <RadioButton
                    android:text="@string/first_subgroup"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_subgroup_radio"
                    android:checked="true"/>
            <RadioButton
                    android:id="@+id/second_subgroup_radio"
                    android:text="@string/second_subgroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/variant_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/subgroup_radio" android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/kp_input" app:layout_constraintHorizontal_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true"
                    android:hint="@string/variant_full_label"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kp_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/subgroup_radio" android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/variant_input" app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginStart="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true"
                    android:hint="@string/kp_label"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/group_label"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:textAlignment="textStart" android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>